package CA5_ATM;

public interface TaiKhoanATM {
    boolean kiemTraSoDu(int soTienDu);
    void nhanThongBao(int soTienRut, boolean thanhCong);
}
